* Fixed the list spacing

--- a/src/app/components/header/page.module.scss
+++ b/src/app/components/header/page.module.scss
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;  
+  padding: 1.5rem 4rem;
 }
 
 .button{
