--- a/src/app/components/main/page.module.scss
+++ b/src/app/components/main/page.module.scss
@@ -5,7 +5,7 @@
   flex-wrap: wrap;
   justify-content: center;
   overflow-y: auto;
-  margin-top: 60px;
-  height: calc(100vh - 60px); /* Adjust 60px to match your header height */
+  margin-top: 6rem;
+  height: calc(100vh - 6rem); /* Adjust 60px to match your header height */
 
 }
